--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -16,7 +16,7 @@
     
     Recientemente, estos entornos inteligentes también se están explotando para renovar el interés de los usuarios por el patrimonio cultural, al garantizar experiencias culturales interactivas reales. Dentro de las instituciones de patrimonio cultural, las tecnologías en red tienen un enorme potencial para mejorar los esfuerzos de conservación, el aumento del acceso a los conocimientos contextuales y para reinventar la interacción de las personas con las obras culturales.\\
     
-    La Universidad de Oriente no se queda atrás cuando de exposiciones se trata. La sede Antonio Maceo cuenta con tres muestras expositivas. Una de ellas es la muestra Francisco Prat Puig, ubicada en la Oficina del Historiador de la Ciudad que contiene piezas de interés histórico y cultural. Entre ellas se destacan colecciones de numismática, artes plásticas, cerámica, condecoraciones, objetos personales, etcétera; estas fueron donadas por el propio Prat a la Casa de Altos Estudios oriental las cuales actualmente se encuentran en un estado de deterioro por falta de las condiciones que requiere el local para su conservación.\\
+    \textbf{\large Revisar para argumentar más sobre las exposiciones} La Universidad de Oriente no se queda atrás cuando de exposiciones se trata. La sede Antonio Maceo cuenta con tres muestras expositivas. Una de ellas es la muestra Francisco Prat Puig, ubicada en la Oficina del Historiador de la Ciudad que contiene piezas de interés histórico y cultural. Entre ellas se destacan colecciones de numismática, artes plásticas, cerámica, condecoraciones, objetos personales, etcétera; estas fueron donadas por el propio Prat a la Casa de Altos Estudios oriental las cuales actualmente se encuentran en un estado de deterioro por falta de las condiciones que requiere el local para su conservación.\\
     
     La temperatura, la humedad, el CO2, las vibraciones, el salitre, la iluminación, el polvo, entre otros, son factores que inciden directamente en el deterioro gradual de las obras que allí se encuentran. Con la aplicación del Internet de las Cosas en esta sala expositiva es posible reducir la incidencia de estos factores. La tecnología permitirá a los responsables del museo tener una visión más precisa y completa de lo que ocurre, brindando la posibilidad de evaluar en tiempo real el estado de cada área para la toma de decisiones ante alertas por eventos de deterioro.\\
 
