--- a/caratula.tex
+++ b/caratula.tex
@@ -1,8 +1,10 @@
 \begin{titlepage}
-    \newgeometry{left=0.1mm,bottom=0.1mm,top=25.5mm}
-    \parbox[s]{500pt}{
-        \vspace{-27mm}
-        \includegraphics[width=8cm,height=30cm]{imagenes/a1.jpg}
-    }
+    \centering
+    % \newgeometry{left=0.1mm,bottom=0.1mm,top=25.5mm}
+    % \parbox[s]{500pt}{
+        % \vspace{-27mm}
+        % \includegraphics[width=8cm,height=30cm]{imagenes/a1.jpg}
+    % }
     % \pagestyle{empty}
+    \textbf{Aquí va la carátula}
 \end{titlepage}
