--- a/tesis.tex
+++ b/tesis.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,12pt, openany]{report}
-\usepackage[spanish]{babel}
+\usepackage[spanish,es-tabla]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -54,6 +54,9 @@
 
 %Indice general
     \include{capitulos/indice}
+
+% Indice de tablas y figuras
+    \include{capitulos/indice2}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
