--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -1,4 +1,4 @@
-\chapter{Estado del arte} \label{cap:aproxTeoricas}
+\chapter{Estado del Arte del IoT en los museos} \label{cap:aproxTeoricas}
 
 \addcontentsline{toc}{section}{Introducción}
         \textbf{\Large Introducción}\newline
@@ -22,8 +22,26 @@
 
         En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.\\
                 
-        En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things (IoT), que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID pasivos. Una vez robadas, las reliquias culturales saldrán del rango efectivo de identificación RFID, lo que da como resultado una alarma inmediata, luego el sistema inicia el plan antirrobo. \cite{chinaSistemaSeguridadRFID}.
+        En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things (IoT), que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID pasivos. Una vez robadas, las reliquias culturales saldrán del rango efectivo de identificación RFID, lo que da como resultado una alarma inmediata, luego el sistema inicia el plan antirrobo. \cite{chinaSistemaSeguridadRFID}.\\
 
+        \begin{table}[h]
+            \begin{center}
+                \begin{tabular}{|l|l|l|l|}
+                \hline
+                Autor & Problemática & Lugar & Referencia \\ \hline
+                      &              &       &            \\
+                      &              &       &            \\
+                      &              &       &            \\
+                      &              &       &            \\
+                      &              &       &            \\
+                      &              &       &           
+                \end{tabular}
+            \end{center}
+            \caption{Relación Autores}
+                \subcaption*{Fuente: Elaboración propia}
+                \label{tab: relacion_autores}
+        \end{table}
+        
 
     \section{Internet de las Cosas en Cuba}\label{sec:iotCuba} 
         En Cuba existen escasos ejemplos de la aplicación del Internet de las Cosas en los museos, no obstante, dentro de esos pocos se encuentra el Palacio del Segundo Cabo.\\
@@ -64,23 +82,21 @@
     Dentro de las capas más importantes del IoT podemos encontrar:
 
     \begin{itemize}
-        \item \textit{La capa de percepción} (Objetos/ Dispositivos/ SensorActuador/ WSN/ Edge Computing/ Sensado), digitaliza y transfiere datos a la capa de red, a través de canales seguros [citar: Internet of things: State of the art]. Se localizan los objetos físicos, dispositivos sensores y actuadores utilizados para recopilar información del contexto.
-        \item \textit{La capa de acceso} (Adaptación/ Observador), comprueba la información que recibe de la capa de percepción, si está protegida o no contra intrusos y virus. Si hay algún ataque, no pasa los datos a la siguiente capa. También verifica la identidad y autenticación de los objetos [citar: Internet of things: State of the art] [IoT Elements, Layered Architectures and Security Issues: A Comprehensive Survey].
-        \item \textit{La capa de Red} (Abstracción de Objetos/ Transporte/ Fog computing), transporta y transmite los datos, recopilados de la capa de percepción, hacia la cloud. Se localizan componentes de red (switch, router, Gateway, etc.), medios de comunicación y protocolos. También es responsable de aspectos de seguridad y el control de ataques [citar: Internet of things: State of the art], [IoT Elements, Layered Architectures and Security Issues: A Comprehensive Survey].
+        \item \textit{La capa de percepción} (Objetos/ Dispositivos/ SensorActuador/ WSN/ Edge Computing/ Sensado), digitaliza y transfiere datos a la capa de red, a través de canales seguros \cite{internetOfThingsStateOfTheArt}. Se localizan los objetos físicos, dispositivos sensores y actuadores utilizados para recopilar información del contexto.
+        \item \textit{La capa de acceso} (Adaptación/ Observador), comprueba la información que recibe de la capa de percepción, si está protegida o no contra intrusos y virus. Si hay algún ataque, no pasa los datos a la siguiente capa. También verifica la identidad y autenticación de los objetos \cite{internetOfThingsStateOfTheArt}.
+        \item \textit{La capa de Red} (Abstracción de Objetos/ Transporte/ Fog computing), transporta y transmite los datos, recopilados de la capa de percepción, hacia la cloud. Se localizan componentes de red (switch, router, Gateway, etc.), medios de comunicación y protocolos. También es responsable de aspectos de seguridad y el control de ataques \cite{internetOfThingsStateOfTheArt}.
         \item \textit{La Capa Aplicación / Cloud Computing (CC)} en modelos de más de tres capas, puede dividirse en:
             \begin{itemize}
-                \item \textit{Capa de procesamiento y almacenamiento, Soporte, o Middleware}. Permite a los programadores de aplicaciones IoT trabajar con objetos heterogéneos sin tener en cuenta una plataforma de hardware específica. Se encarga de integrar, almacenar, procesar y analizar datos, tomar decisiones y ofrecer servicios de protocolos de conexión de red [citar: Internet of things: State of the art].
-                \item \textit{La capa de aplicación}, define los servicios y funciones que proporciona la aplicación IoT implementada (hogar inteligente, ciudad inteligente, salud inteligente, etc.) a los clientes. Los servicios pueden variar para cada aplicación y depende de la información que se recopilan de los sensores. También se consideran aspectos de seguridad [citar: Internet of things: State of the art], [IoT Elements, Layered Architectures and Security Issues: A Comprehensive Survey].
-                \item \textit{La capa empresarial}, tiene la responsabilidad de administrar y controlar el comportamiento de las aplicaciones, modelos de negocios y ganancias de IoT. También tiene la capacidad de determinar cómo se puede crear, almacenar y cambiar la información. Administra la privacidad del usuario y evita vulnerabilidades [citar: Internet of things: State of the art], [IoT Elements, Layered Architectures and Security Issues: A Comprehensive Survey].
+                \item \textit{Capa de procesamiento y almacenamiento, Soporte, o Middleware}. Permite a los programadores de aplicaciones IoT trabajar con objetos heterogéneos sin tener en cuenta una plataforma de hardware específica. Se encarga de integrar, almacenar, procesar y analizar datos, tomar decisiones y ofrecer servicios de protocolos de conexión de red \cite{internetOfThingsStateOfTheArt}.
+                \item \textit{La capa de aplicación}, define los servicios y funciones que proporciona la aplicación IoT implementada (hogar inteligente, ciudad inteligente, salud inteligente, etc.) a los clientes. Los servicios pueden variar para cada aplicación y depende de la información que se recopilan de los sensores. También se consideran aspectos de seguridad \cite{internetOfThingsStateOfTheArt}.
+                \item \textit{La capa empresarial}, tiene la responsabilidad de administrar y controlar el comportamiento de las aplicaciones, modelos de negocios y ganancias de IoT. También tiene la capacidad de determinar cómo se puede crear, almacenar y cambiar la información. Administra la privacidad del usuario y evita vulnerabilidades \cite{internetOfThingsStateOfTheArt}.\\\\\\\\
             \end{itemize} 
     \end{itemize}
-    
-    ...
+
+    Continuar...
 
 
     \section{Análisis de variables y sensores}\label{sec: analisisVariables}
-
-    %\section{Sensores a emplear}\label{sec: sensoresEmplear}
 
     \section{Sistema de comunicación}\label{sec: sistemaComunicación}
 
