--- a/capitulos/dedicatoria.tex
+++ b/capitulos/dedicatoria.tex
@@ -7,5 +7,6 @@
         Dedico este trabajo a Dios por haberme permitido llegar hasta aquí.\\
         A mis padres, hermana y familia en general.\\
         A mi prometida.\\
+        A mi tutor.\\
         A mis amigos y a mis compañeros de estudio.
     }\end{flushright}
