--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -26,15 +26,15 @@
 
         \begin{table}[h]
             \begin{center}
-                \begin{tabular}{|l|l|l|l|}
+                \begin{tabular}{|l|l|l|}
                 \hline
-                Autor & Problemática & Lugar & Referencia \\ \hline
-                      &              &       &            \\
-                      &              &       &            \\
-                      &              &       &            \\
-                      &              &       &            \\
-                      &              &       &            \\
-                      &              &       &           
+                Aplicación IoT & Lugar & Referencia \\ \hline
+                             &       &            \\
+                             &       &            \\
+                             &       &            \\
+                             &       &            \\
+                             &       &            \\
+                             &       &           
                 \end{tabular}
             \end{center}
             \caption{Relación Autores}
