30 de abril 10:27am

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -11,7 +11,7 @@
     \section{Internet de las Cosas en museos internacionales}\label{sec:iotMundo}
         
         Hoy en día existen museos líderes en el tema de interacción con el público, como es el caso de los museos Digital Art Museum TeamLab Borderless de Japón y el Atelier de Lumieres de Francia. El primero de estos es un espacio que posee 10 mil metros cuadrados de proyección 3D, acompañados de juegos de luces y efectos especiales que llevan a los visitantes en medio de paisajes surrealistas. El segundo museo realiza macro proyecciones 360° de las obras más importantes de artistas como Van Gogh, Picasso, Chagall, entre otros. \cite{museoInterSalaLimpia}.\\
-        
+
         En Maloka \footnote{Maloka es un museo interactivo que fomenta la pasión por el aprendizaje a partir de los lazos entre ciencia, tecnología, innovación y sociedad.}, Bogotá, las exhibiciones ponen a prueba los 5 sentidos de los visitantes, haciendo que tanto niños, como adultos disfruten un tiempo en familia repleto de nuevos conocimientos, incluyendo recorridos por salas interactivas y funciones de proyección de cine. \cite{maloka}.\\
 
         En el museo MUST en Lecce, Italia, se llevó a cabo la instalación de un dispositivo portátil que combina el reconocimiento de imágenes y las capacidades de localización para proporcionar automáticamente a los usuarios contenidos culturales relacionados con las obras de arte observadas. La información de localización se obtiene mediante una infraestructura Bluetooth Low Energy \footnote{Bluetooth Low Energy es una tecnología de red de área personal inalámbrica, diseñada y comercializada por Bluetooth SIG destinada a aplicaciones en el cuidado de la salud, fitness y beacons, seguridad y las industrias de entretenimiento en el hogar} instalada en el museo. Además, el sistema interactúa con la Nube para almacenar contenidos multimedia producidos por el usuario y compartir eventos generados por el entorno en sus redes sociales. Estos servicios interactúan con dispositivos físicos a través de un middleware multiprotocolo. \cite{museoItalia}.\\
@@ -27,22 +27,17 @@
         \textbf{Completar tabla}...
 
         \begin{table}[h]
-            \begin{center}
-                \begin{tabular}{|l|l|l|}
+            \begin{tabular}{|l|l|l|}
                 \hline
-                Aplicación IoT & Lugar & Referencia \\ \hline
-                             &       &            \\
-                             &       &            \\
-                             &       &            \\
-                             &       &            \\
-                             &       &            \\
-                             &       &           
-                \end{tabular}
-            \end{center}
-            \caption{...}
-                \subcaption*{Fuente: Elaboración propia}
-                \label{tab: relacion_autores}
-        \end{table}
+            Aplicación IoT                                                               & Lugar                                                                                     & Referencia                   \\ \hline
+            \begin{tabular}[c]{@{}l@{}}Proyección 3D y efectos\\ especiales\end{tabular} & \begin{tabular}[c]{@{}l@{}}Digital Art Museum TeamLab \\ Borderless de Japón\end{tabular} & (Corzo Vargas y cols., 2019) \\ \hline
+                                                                                         &                                                                                           &                              \\
+                                                                                         &                                                                                           &                              \\
+                                                                                         &                                                                                           &                              \\
+                                                                                         &                                                                                           &                              \\
+                                                                                         &                                                                                           &                             
+            \end{tabular}
+            \end{table}
 
         Como podemos observar en la tabla \ref{tab: relacion_autores} ...
         
