--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -24,7 +24,7 @@
                 
         En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things (IoT), que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID pasivos. Una vez robadas, las reliquias culturales saldrán del rango efectivo de identificación RFID, lo que da como resultado una alarma inmediata, luego el sistema inicia el plan antirrobo. \cite{chinaSistemaSeguridadRFID}.\\
 
-        \textbf{Completar tabla}...
+        \textbf{Completar tabla *******}
 
         \begin{table}[h]
             \begin{tabular}{|l|l|l|}
@@ -37,9 +37,12 @@
                                                                                          &                                                                                           &                              \\
                                                                                          &                                                                                           &                             
             \end{tabular}
+            \caption{Aquí va el nombre}
+            \subcaption*{Fuente: Elaboració propia}
+            \label{tab:relacion_autores}
             \end{table}
 
-        Como podemos observar en la tabla \ref{tab: relacion_autores} ...
+        Como podemos observar en la tabla \ref{tab:relacion_autores} ...
         
 
     \section{Internet de las Cosas en Cuba}\label{sec:iotCuba} 
