--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -24,25 +24,35 @@
                 
         En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things (IoT), que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID pasivos. Una vez robadas, las reliquias culturales saldrán del rango efectivo de identificación RFID, lo que da como resultado una alarma inmediata, luego el sistema inicia el plan antirrobo. \cite{chinaSistemaSeguridadRFID}.\\
 
-        \textbf{Completar tabla *******}
-
         \begin{table}[h]
             \begin{tabular}{|l|l|l|}
                 \hline
-            Aplicación IoT                                                               & Lugar                                                                                     & Referencia                   \\ \hline
-            \begin{tabular}[c]{@{}l@{}}Proyección 3D y efectos\\ especiales\end{tabular} & \begin{tabular}[c]{@{}l@{}}Digital Art Museum TeamLab \\ Borderless de Japón\end{tabular} & (Corzo Vargas y cols., 2019) \\ \hline
-                                                                                         &                                                                                           &                              \\
-                                                                                         &                                                                                           &                              \\
-                                                                                         &                                                                                           &                              \\
-                                                                                         &                                                                                           &                              \\
-                                                                                         &                                                                                           &                             
+                \rowcolor[HTML]{9698ED} 
+                Aplicación IoT                                                                                                                                    & Lugar                                                                                            & Referencia                                                                                       \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Proyección 3D y efectos\\ especiales\end{tabular}                                                                      & \begin{tabular}[c]{@{}l@{}}Digital Art Museum TeamLab \\ Borderless de Japón\end{tabular}        & \begin{tabular}[c]{@{}l@{}}(Corzo Vargas\\ y cols., 2019)\end{tabular}                           \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Proyecciones 360° de obras\\ importantes de artistas.\end{tabular}                                                     & \begin{tabular}[c]{@{}l@{}}Atelier de Lumieres de \\ Francia.\end{tabular}                       & \begin{tabular}[c]{@{}l@{}}(Corzo Vargas\\ y cols., 2019).\end{tabular}                          \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Recorridos por salas \\ interactivas y proyecciones\\ de cine.\end{tabular}                                            & Maloka, Bogotá.                                                                                  & \begin{tabular}[c]{@{}l@{}}(Pinzón Ortega, \\ Franco Avellaneda, \\ y Falla, 2015).\end{tabular} \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Reconocimiento de\\ imágenes y capacidades de\\ localización proporcionando\\ contenido cultural.\end{tabular}         & Museo MUST en Lecce, Italia.                                                                     & (Alletto y cols., 2016).                                                                         \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Obras de arte parlantes\\ equipadas con tableros de\\ sensores. Cada obra de arte\\ comparte su historia.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Conjunto Monumental de San \\ Domenico Maggiore, Italia.\end{tabular} & \begin{tabular}[c]{@{}l@{}}(Chianese,\\ Piccialli, y Jung, 2016).\end{tabular}                   \\ \hline
             \end{tabular}
-            \caption{Aquí va el nombre}
-            \subcaption*{Fuente: Elaboració propia}
-            \label{tab:relacion_autores}
-            \end{table}
+        \end{table}
 
-        Como podemos observar en la tabla \ref{tab:relacion_autores} ...
+        \begin{table}[h]
+            \begin{tabular}{|lll|}
+                \hline
+                \multicolumn{3}{|c|}{Continuación Tabla 1.1}                                                                                                                                                                                                                                                                                                                                                                                                                                                    \\ \hline
+                \multicolumn{3}{|c|}{Proyectos}                                                                                                                                                                                                                                                                                                                                                                                                                                                                 \\ \hline
+                \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Captura el movimiento del\\ usuario, procesamiento de\\ imágenes.\end{tabular}}                                                                  & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}III Congreso Internacional de\\ Avances en Electricidad,\\ Electrónica, Información,\\ Comunicación y\\ Bioinformática en el año 2017\end{tabular}}                & \begin{tabular}[c]{@{}l@{}}(Sornalatha\\ y Kavitha, 2017).\end{tabular}  \\ \hline
+                \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Sistema para la conservación\\ de las piezas en los museos\\ en base a pruebas\\ de contacto o movimiento,\\ intensidad de la luz.\end{tabular}} & \multicolumn{1}{l|}{Universidad de El Cairo, Egipto}                                                                                                                                                              & \begin{tabular}[c]{@{}l@{}}(Al-Habal\\ y Khattab, 2019).\end{tabular}    \\ \hline
+                \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Propuesta de esquema\\ antirrobo para museos\\ basados en IoT.\end{tabular}}                                                                     & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Escuela de Ingeniería Electrónica,\\ Universidad de Jiujiang\\ y la Escuela de Ciencias de\\ la Computación, Universidad de\\ Wuhan, ambas de China.\end{tabular}} & \begin{tabular}[c]{@{}l@{}}(Liu, Wang, Qi,\\ y Yang, 2019).\end{tabular} \\ \hline
+                \end{tabular}
+            \caption{Aquí va el nombre}
+            \subcaption*{Fuente: Elaboración propia}
+            \label{tab: relacion_autores}
+        \end{table}
+        \vspace{5cm}
+        
+        Como podemos observar en la tabla \ref{tab: relacion_autores} ...
         
 
     \section{Internet de las Cosas en Cuba}\label{sec:iotCuba} 
