1 de mayo 3:17pm

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -46,7 +46,7 @@
                 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Sistema para la conservación\\ de las piezas en los museos\\ en base a pruebas\\ de contacto o movimiento,\\ intensidad de la luz.\end{tabular}} & \multicolumn{1}{l|}{Universidad de El Cairo, Egipto}                                                                                                                                                              & \begin{tabular}[c]{@{}l@{}}(Al-Habal\\ y Khattab, 2019).\end{tabular}    \\ \hline
                 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Propuesta de esquema\\ antirrobo para museos\\ basados en IoT.\end{tabular}}                                                                     & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Escuela de Ingeniería Electrónica,\\ Universidad de Jiujiang\\ y la Escuela de Ciencias de\\ la Computación, Universidad de\\ Wuhan, ambas de China.\end{tabular}} & \begin{tabular}[c]{@{}l@{}}(Liu, Wang, Qi,\\ y Yang, 2019).\end{tabular} \\ \hline
                 \end{tabular}
-            \caption{Aquí va el nombre}
+            \caption{IoT Internacional}
             \subcaption*{Fuente: Elaboración propia}
             \label{tab: relacion_autores}
         \end{table}
