2 de mayo 5:50pm

--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -16,13 +16,13 @@
     
     Recientemente, estos entornos inteligentes también se están explotando para renovar el interés de los usuarios por el patrimonio cultural, al garantizar experiencias culturales interactivas reales. Dentro de las instituciones de patrimonio cultural, las tecnologías en red tienen un enorme potencial para mejorar los esfuerzos de conservación, el aumento del acceso a los conocimientos contextuales y para reinventar la interacción de las personas con las obras culturales.\\
     
-    La Universidad de Oriente cuenta con tres muestras expositivas como parte de su patrimonio cultural. Dos de estas muestras se encuentran en la sede Antonio Maceo; la primera, caracterizada por ser de carácter arqueológico, ya que consta de varios objetos...\\ 
+    La Universidad de Oriente cuenta con tres muestras expositivas como parte de su patrimonio cultural. Dos de ellas se encuentran en la sede Antonio Maceo; la primera, con carácter arqueológico, situada en la planta baja de la Facultad de Ciencias Sociales. Mientras que la segunda, museo de Historia Natural Dr. Theodoro Ramsden de la Torre, se localiza en la tercera planta de la Facultad de Derecho. Estas no están abiertas directamente al público debido a su ubicación en aulas, siendo así empleados como medios de enseñanza.\\ 
     
     La tercera de estas muestras, la Francisco Prat Puig, ubicada en la Oficina del Historiador de la Ciudad de Santiago de Cuba, contiene piezas de interés histórico y cultural. A diferencia de las muestras anteriores ésta posee características de museo y se encuentra emplazada en un lugar con acceso al público. Allí se destacan colecciones de numismática, artes plásticas, cerámica, condecoraciones, objetos personales entre otras; estas fueron donadas por el propio Prat a la Casa de Altos Estudios oriental las cuales actualmente se encuentran en un estado de deterioro por falta de las condiciones que requiere el local para su conservación.\\
     
     La temperatura, la humedad, el CO2, las vibraciones, el salitre, la iluminación, el polvo, entre otros, son factores que inciden directamente en el deterioro gradual de las obras que allí se encuentran. Con la aplicación del Internet de las Cosas en esta sala expositiva es posible reducir la incidencia de estos factores. La tecnología permitirá a los responsables del museo tener una visión más precisa y completa de lo que ocurre, brindando la posibilidad de evaluar en tiempo real el estado de cada área para la toma de decisiones ante alertas por eventos de deterioro.\\
 
-    En base a lo anterior, se asume como \textbf{problema de investigación: }la inexistencia de un sistema de monitoreo para el control del estado de conservación de las piezas en la muestra Prat Puig imposibilitando el control en tiempo real por parte de los especialistas; por lo que se definde entonces como \textbf{objeto de la investigación}, los sistemas de supervisión y monitoreo de piezas de arte basados en IoT.\\ 
+    En base a lo anterior, se asume como \textbf{problema de investigación: }la inexistencia de un sistema de monitoreo para el control del estado de conservación de las piezas en la muestra Prat Puig imposibilitando el control en tiempo real por parte de los especialistas; por lo que se definde entonces como \textbf{objeto de la investigación}, los sistemas de supervisión y monitoreo de piezas de arte basados en IoT.\\\\\\
     
     \textbf{Campo de acción: }Diseño e implementación de sistemas basados en el empleo del Internet de las Cosas. El \textbf{objetivo} está dado por el diseño e implementación de un sistema supervisorio basado en IoT empleando comunicación inalámbrica.\\\\
 
@@ -32,10 +32,10 @@
     \begin{enumerate} %Para crear la lista
         \item Analizar la trascendencia del Internet de las Cosas en los museos tanto internacionales como en los museos de Cuba.
         \item Analizar las arquitecturas del Internet de las Cosas y la proposición de la arquitectura del proyecto.
-        \item Caracterizar los diferentes sensores a emplear acorde a las variables presentes
-        \item Proponer un sistema de comunicación
-        \item Proponer un sistema de seguridad
-        \item Implementación de un sistema de supervisión y monitoreo basado en IoT
+        \item Caracterizar los diferentes sensores a emplear acorde a las variables presentes.
+        \item Proponer un sistema de comunicación.
+        \item Proponer un sistema de seguridad.
+        \item Implementación de un sistema de supervisión y monitoreo basado en IoT.
     \end{enumerate}
 
     \textbf{Aporte de la investigación: } un sistema de supervisión y monitoreo basado en IoT para el control del estado de conservación de los objetos de la muestra.\\
