2 de mayo 8:43pm

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -17,43 +17,43 @@
         En el museo MUST en Lecce, Italia, se llevó a cabo la instalación de un dispositivo portátil que combina el reconocimiento de imágenes y las capacidades de localización para proporcionar automáticamente a los usuarios contenidos culturales relacionados con las obras de arte observadas. La información de localización se obtiene mediante una infraestructura Bluetooth Low Energy \footnote{Bluetooth Low Energy es una tecnología de red de área personal inalámbrica, diseñada y comercializada por Bluetooth SIG destinada a aplicaciones en el cuidado de la salud, fitness y beacons, seguridad y las industrias de entretenimiento en el hogar} instalada en el museo. Además, el sistema interactúa con la Nube para almacenar contenidos multimedia producidos por el usuario y compartir eventos generados por el entorno en sus redes sociales. Estos servicios interactúan con dispositivos físicos a través de un middleware multiprotocolo. \cite{museoItalia}.\\
 
         En el caso del Conjunto Monumental de San Domenico Maggiore, ubicado en Nápoles (Italia), dentro del mismo se han transformado más de 270 esculturas en obras de arte parlantes. Equipado con un tablero de sensores, cada objeto puede proponerse automáticamente a los visitantes, compartiendo su historia en diferentes modalidades e idiomas, lo que permite un proceso de disfrute novedoso durante una experiencia cultural. \cite{monumentoSanDomenico}.\\
-        
-        Existen otros proyectos de utilización del Iot en museos, tal es el caso del proyecto propuesto en el III Congreso Internacional de Avances en Electricidad, Electrónica, Información, Comunicación y Bioinformática en el año 2017. El proyecto consiste en el montaje de un sistema que se basa en un dispositivo portátil que captura el movimiento del usuario, realiza el algoritmo de sustracción de fondo para realizar el procesamiento de imágenes y obtiene la información de localización de un Bluetooth Low Energy (BLE) que está fijo en el museo.\cite{proyectoIotdispositivoPortatil}.
 
-        En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.\\
-                
+        En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.
+        
+        Existen otros proyectos de utilización del Iot en museos, tal es el caso del proyecto propuesto en el III Congreso Internacional de Avances en Electricidad, Electrónica, Información, Comunicación y Bioinformática en el año 2017. El proyecto consiste en el montaje de un sistema que se basa en un dispositivo portátil que captura el movimiento del usuario, realiza el algoritmo de sustracción de fondo para realizar el procesamiento de imágenes y obtiene la información de localización de un Bluetooth Low Energy (BLE) que está fijo en el museo.\cite{proyectoIotdispositivoPortatil}.\\
+
         En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things (IoT), que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID pasivos. Una vez robadas, las reliquias culturales saldrán del rango efectivo de identificación RFID, lo que da como resultado una alarma inmediata, luego el sistema inicia el plan antirrobo. \cite{chinaSistemaSeguridadRFID}.\\
+
+        La siguiente tabla resume lo anterior expuesto.
 
         \begin{table}[h]
             \begin{tabular}{|l|l|l|}
                 \hline
                 \rowcolor[HTML]{9698ED} 
-                Aplicación IoT                                                                                                                                    & Lugar                                                                                            & Referencia                                                                                       \\ \hline
-                \begin{tabular}[c]{@{}l@{}}Proyección 3D y efectos\\ especiales\end{tabular}                                                                      & \begin{tabular}[c]{@{}l@{}}Digital Art Museum TeamLab \\ Borderless de Japón\end{tabular}        & \begin{tabular}[c]{@{}l@{}}(Corzo Vargas\\ y cols., 2019)\end{tabular}                           \\ \hline
-                \begin{tabular}[c]{@{}l@{}}Proyecciones 360° de obras\\ importantes de artistas.\end{tabular}                                                     & \begin{tabular}[c]{@{}l@{}}Atelier de Lumieres de \\ Francia.\end{tabular}                       & \begin{tabular}[c]{@{}l@{}}(Corzo Vargas\\ y cols., 2019).\end{tabular}                          \\ \hline
-                \begin{tabular}[c]{@{}l@{}}Recorridos por salas \\ interactivas y proyecciones\\ de cine.\end{tabular}                                            & Maloka, Bogotá.                                                                                  & \begin{tabular}[c]{@{}l@{}}(Pinzón Ortega, \\ Franco Avellaneda, \\ y Falla, 2015).\end{tabular} \\ \hline
-                \begin{tabular}[c]{@{}l@{}}Reconocimiento de\\ imágenes y capacidades de\\ localización proporcionando\\ contenido cultural.\end{tabular}         & Museo MUST en Lecce, Italia.                                                                     & (Alletto y cols., 2016).                                                                         \\ \hline
-                \begin{tabular}[c]{@{}l@{}}Obras de arte parlantes\\ equipadas con tableros de\\ sensores. Cada obra de arte\\ comparte su historia.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Conjunto Monumental de San \\ Domenico Maggiore, Italia.\end{tabular} & \begin{tabular}[c]{@{}l@{}}(Chianese,\\ Piccialli, y Jung, 2016).\end{tabular}                   \\ \hline
+                Aplicación IoT                                                                                                                                                        & Lugar                                                                                            & Referencia                                                                                       \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Proyección 3D y efectos\\ especiales\end{tabular}                                                                                          & \begin{tabular}[c]{@{}l@{}}Digital Art Museum TeamLab \\ Borderless de Japón\end{tabular}        & \begin{tabular}[c]{@{}l@{}}(Corzo Vargas\\ y cols., 2019)\end{tabular}                           \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Proyecciones 360° de obras\\ importantes de artistas.\end{tabular}                                                                         & \begin{tabular}[c]{@{}l@{}}Atelier de Lumieres de \\ Francia.\end{tabular}                       & \begin{tabular}[c]{@{}l@{}}(Corzo Vargas\\ y cols., 2019).\end{tabular}                          \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Recorridos por salas \\ interactivas y proyecciones\\ de cine.\end{tabular}                                                                & Maloka, Bogotá.                                                                                  & \begin{tabular}[c]{@{}l@{}}(Pinzón Ortega, \\ Franco Avellaneda, \\ y Falla, 2015).\end{tabular} \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Reconocimiento de\\ imágenes y capacidades de\\ localización proporcionando\\ contenido cultural.\end{tabular}                             & Museo MUST en Lecce, Italia.                                                                     & (Alletto y cols., 2016).                                                                         \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Obras de arte parlantes\\ equipadas con tableros de\\ sensores. Cada obra de arte\\ comparte su historia.\end{tabular}                     & \begin{tabular}[c]{@{}l@{}}Conjunto Monumental de San \\ Domenico Maggiore, Italia.\end{tabular} & \begin{tabular}[c]{@{}l@{}}(Chianese,\\ Piccialli, y Jung, 2016).\end{tabular}                   \\ \hline
+                \begin{tabular}[c]{@{}l@{}}Sistema para la conservación\\de las piezas en los museos\\en base a pruebas\\de contacto o movimiento,\\intensidad de la luz.\end{tabular}&Universidad de El Cairo, Egipto                                                                   & \begin{tabular}[c]{@{}l@{}}(Al-Habal\\y Khattab, 2019).\end{tabular}                             \\ \hline
             \end{tabular}
         \end{table}
 
         \begin{table}[h]
             \begin{tabular}{|lll|}
                 \hline
-                \multicolumn{3}{|c|}{Continuación Tabla 1.1}                                                                                                                                                                                                                                                                                                                                                                                                                                                    \\ \hline
-                \multicolumn{3}{|c|}{Proyectos}                                                                                                                                                                                                                                                                                                                                                                                                                                                                 \\ \hline
-                \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Captura el movimiento del\\ usuario, procesamiento de\\ imágenes.\end{tabular}}                                                                  & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}III Congreso Internacional de\\ Avances en Electricidad,\\ Electrónica, Información,\\ Comunicación y\\ Bioinformática en el año 2017\end{tabular}}                & \begin{tabular}[c]{@{}l@{}}(Sornalatha\\ y Kavitha, 2017).\end{tabular}  \\ \hline
-                \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Sistema para la conservación\\ de las piezas en los museos\\ en base a pruebas\\ de contacto o movimiento,\\ intensidad de la luz.\end{tabular}} & \multicolumn{1}{l|}{Universidad de El Cairo, Egipto}                                                                                                                                                              & \begin{tabular}[c]{@{}l@{}}(Al-Habal\\ y Khattab, 2019).\end{tabular}    \\ \hline
-                \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Propuesta de esquema\\ antirrobo para museos\\ basados en IoT.\end{tabular}}                                                                     & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Escuela de Ingeniería Electrónica,\\ Universidad de Jiujiang\\ y la Escuela de Ciencias de\\ la Computación, Universidad de\\ Wuhan, ambas de China.\end{tabular}} & \begin{tabular}[c]{@{}l@{}}(Liu, Wang, Qi,\\ y Yang, 2019).\end{tabular} \\ \hline
+                \multicolumn{3}{|c|}{Continuación Tabla 1.1}                                                                                                                                                                                                                                                                                                                                                                                    \\ \hline
+                \multicolumn{3}{|c|}{Proyectos}                                                                                                                                                                                                                                                                                                                                                                                                 \\ \hline
+                \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Captura el movimiento del\\ usuario, procesamiento de\\ imágenes.\end{tabular}} & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}III Congreso Internacional de\\ Avances en Electricidad,\\ Electrónica, Información,\\ Comunicación y\\ Bioinformática en el año 2017\end{tabular}}                & \begin{tabular}[c]{@{}l@{}}(Sornalatha y \\ Kavitha, 2017).\end{tabular}  \\ \hline
+                \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Propuesta de esquema\\ antirrobo para museos\\ basados en IoT.\end{tabular}}    & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Escuela de Ingeniería Electrónica,\\ Universidad de Jiujiang\\ y la Escuela de Ciencias de\\ la Computación, Universidad de\\ Wuhan, ambas de China.\end{tabular}} & \begin{tabular}[c]{@{}l@{}}(Liu, Wang, Qi, y Yang, \\ 2019).\end{tabular} \\ \hline
                 \end{tabular}
             \caption{IoT Internacional}
             \subcaption*{Fuente: Elaboración propia}
             \label{tab: relacion_autores}
         \end{table}
-        \vspace{5cm}
-        
+                
         Como podemos observar en la tabla \ref{tab: relacion_autores} ...
-        
 
     \section{Internet de las Cosas en Cuba}\label{sec:iotCuba} 
         En Cuba existen escasos ejemplos de la aplicación del Internet de las Cosas en los museos, no obstante, dentro de esos pocos se encuentra el Palacio del Segundo Cabo.\\
