2 de mayo 9:45pm

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -20,9 +20,9 @@
 
         En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.
         
-        Existen otros proyectos de utilización del Iot en museos, tal es el caso del proyecto propuesto en el III Congreso Internacional de Avances en Electricidad, Electrónica, Información, Comunicación y Bioinformática en el año 2017. El proyecto consiste en el montaje de un sistema que se basa en un dispositivo portátil que captura el movimiento del usuario, realiza el algoritmo de sustracción de fondo para realizar el procesamiento de imágenes y obtiene la información de localización de un Bluetooth Low Energy (BLE) que está fijo en el museo.\cite{proyectoIotdispositivoPortatil}.\\
+        Existen otros proyectos de utilización del Iot en museos, tal es el caso del proyecto propuesto en el III Congreso Internacional de Avances en Electricidad, Electrónica, Información, Comunicación y Bioinformática en el año 2017. El proyecto consiste en el montaje de un sistema que se basa en un dispositivo portátil que captura el movimiento del usuario, realiza el algoritmo de sustracción de fondo para realizar el procesamiento de imágenes y obtiene la información de localización de un Bluetooth Low Energy (BLE) que está fijo en el museo.\cite{proyectoIotdispositivoPortatil}.
 
-        En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things (IoT), que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID pasivos. Una vez robadas, las reliquias culturales saldrán del rango efectivo de identificación RFID, lo que da como resultado una alarma inmediata, luego el sistema inicia el plan antirrobo. \cite{chinaSistemaSeguridadRFID}.\\
+        En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things (IoT), que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID (identificación por radiofrecuencia del inglés Radio Frequency Identification) pasivos. Una vez robadas, las reliquias culturales saldrán del rango efectivo de identificación RFID, lo que da como resultado una alarma inmediata, luego el sistema inicia el plan antirrobo. \cite{chinaSistemaSeguridadRFID}.\\
 
         La siguiente tabla resume lo anterior expuesto.
 
@@ -43,17 +43,17 @@
         \begin{table}[h]
             \begin{tabular}{|lll|}
                 \hline
-                \multicolumn{3}{|c|}{Continuación Tabla 1.1}                                                                                                                                                                                                                                                                                                                                                                                    \\ \hline
+                \multicolumn{3}{|c|}{Continuación Tabla \ref{tab: iotInternacional}}                                                                                                                                                                                                                                                                                                                                                                                    \\ \hline
                 \multicolumn{3}{|c|}{Proyectos}                                                                                                                                                                                                                                                                                                                                                                                                 \\ \hline
                 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Captura el movimiento del\\ usuario, procesamiento de\\ imágenes.\end{tabular}} & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}III Congreso Internacional de\\ Avances en Electricidad,\\ Electrónica, Información,\\ Comunicación y\\ Bioinformática en el año 2017\end{tabular}}                & \begin{tabular}[c]{@{}l@{}}(Sornalatha y \\ Kavitha, 2017).\end{tabular}  \\ \hline
                 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Propuesta de esquema\\ antirrobo para museos\\ basados en IoT.\end{tabular}}    & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Escuela de Ingeniería Electrónica,\\ Universidad de Jiujiang\\ y la Escuela de Ciencias de\\ la Computación, Universidad de\\ Wuhan, ambas de China.\end{tabular}} & \begin{tabular}[c]{@{}l@{}}(Liu, Wang, Qi, y Yang, \\ 2019).\end{tabular} \\ \hline
                 \end{tabular}
             \caption{IoT Internacional}
             \subcaption*{Fuente: Elaboración propia}
-            \label{tab: relacion_autores}
+            \label{tab: iotInternacional}
         \end{table}
                 
-        Como podemos observar en la tabla \ref{tab: relacion_autores} ...
+        Como podemos observar en la tabla \ref{tab: iotInternacional} existen disímiles ejemplos de aplicación del Internet de las Cosas a nivel internacional; de ahí que haremos énfasis en la aplicación de sistemas de conservación de las piezas en los museos tomando como referencia los ejemplos anteriormente expuestos.
 
     \section{Internet de las Cosas en Cuba}\label{sec:iotCuba} 
         En Cuba existen escasos ejemplos de la aplicación del Internet de las Cosas en los museos, no obstante, dentro de esos pocos se encuentra el Palacio del Segundo Cabo.\\
